# staff-ai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: README.md  log.md  todo.md
docs/planning/: 01-overview.md  02-background.md  03-tech-stack.md  04-architecture.md  05-roadmap.md
src/staff_ai/: __init__.py
