[project]
name = "staff-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dodamking", email = "power6120@naver.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "music21>=9.9.2",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
